# calcslive-plug-4-inventor

./: .gitignore  CHANGELOG.md  CI_CD_SETUP.md  CLAUDE.md  LICENSE  README.md  inventor_api.py  main.py  pyproject.toml  requirements.txt  test_comment_parser.py
.github/workflows/: release.yml
models/: Conveyor Trajectory Designer Model-25.V3.0.1 - Copy.ipt  Conveyor Trajectory Designer Model-25.V3.0.1.ipt  CouplingData.xlsx  Cylinder-sizing (plug-demo).ipt  Cylinder-sizing (plug-demo1).ipt  Cylinder-sizing (plug-demo2).ipt  Cylinder.ipt  README.md  RexnordCouplingData.xlsx  Shaft Coupling - v0.ipt  box0.ipt  box1.ipt  cylinder-container.ipt  cylinder-demo.ipt  plug-demo.ipt  water-tank-sizing-by-calcslive-plug.ipt
models/OldVersions/: plug-demo.0002.ipt
scripts/: bump_version.py
tests/: api.test.http
